# natural-tts

./: .gitignore  Cargo.toml  LICENCE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help_request.md
src/: lib.rs  test.rs  utils.rs
src/models/: coqui.rs  gtts.rs  mod.rs  msedge.rs  parler.rs  tts_rs.rs
src/models/gtts/: languages.rs  mod.rs  url.rs
src/models/meta/: mod.rs  utils.rs
src/models/parler/: mod.rs  model.rs
