[package]
name = "natural-tts"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "High-level bindings to a variety of text-to-speech libraries."
repository = "https://github.com/CodersCreative/natural-tts"
readme = "README.md"
publish = true
keywords = ["text-to-speech", "coqui-ai", "gtts", "parler", "tts"]
categories = ["science", "api-bindings"]

[features]
meta = ["dep:rand", "dep:tracing-chrome", "dep:tracing-subscriber", "dep:serde_json", "dep:hf-hub", "dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
tts-rs = ["dep:tts"]
coqui = ["dep:pyo3"]
parler = ["dep:pyo3"]
gtts = ["dep:pyo3"]
msedge = ["dep:msedge-tts"]
py_tts = ["parler", "gtts"]
non_py_tts = ["meta", "msedge", "tts-rs"]
default = ["py_tts", "non_py_tts"]
test = ["default", "coqui"]

[dependencies]
candle-core = {version = "0.8.3", optional = true}
candle-nn = {version = "0.8.3", optional = true}
candle-transformers = {version = "0.8.3", optional = true}
derive_builder = { version = "0.20.0"}
hf-hub = {version = "0.4.2", optional = true}
hound = {version = "3.5.1"}
msedge-tts = {version = "0.2.1", optional = true}
pyo3 = {version= "0.21.2", features=["auto-initialize"], optional = true} 
# update to 0.23.5 is not compatible with derive_builder and would require a major change
rand = {version = "0.9.0", optional = true}
rodio = {version = "0.20.1"}
serde_json = {version = "1.0.140", optional = true}
thiserror = {version = "2.0.12"}
tracing-chrome = {version = "0.7.2", optional = true}
tracing-subscriber = {version = "0.3.18", optional = true}
tts = {version = "0.26.1", optional = true}
