[package]
name = "natural-tts"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "High-level bindings to a variety of text-to-speech libraries."
repository = "https://github.com/CodersCreative/natural-tts"
readme = "README.md"
publish = true
keywords = ["text-to-speech", "coqui-ai", "gtts", "parler", "tts"]
categories = ["science", "api-bindings"]

[features]
meta = ["dep:rand", "dep:tracing-chrome", "dep:tracing-subscriber", "dep:serde_json", "dep:hf-hub", "dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
tts-rs = ["dep:tts"]
coqui = ["dep:pyo3"]
parler = ["dep:tokenizers", "meta"]
gtts = ["dep:percent-encoding", "dep:minreq"]
msedge = ["dep:msedge-tts"]
py_tts = ["coqui"]
non_py_tts = ["parler", "msedge", "tts-rs", "gtts"]
default = ["gtts"]
test = ["default", "coqui"]

[dependencies]
candle-core = { version = "0.8.3", optional = true }
candle-nn = { version = "0.8.3", optional = true }
candle-transformers = { version = "0.8.3", optional = true}
derive_builder = { version = "0.20.2"}
hf-hub = {version = "0.4.2", optional = true}
hound = {version = "3.5.1"}
msedge-tts = {version = "0.2.4", optional = true}
pyo3 = { version = "0.23.5", features = ["auto-initialize"], optional = true}
rand = {version = "0.8.5", optional = true}
rodio = {version = "0.20.1"}
serde = "1.0.218"
percent-encoding = {version = "2.1.0", optional = true}
minreq = { version="2.0.3", features=["https"], optional = true }
serde_json = {version = "1.0.140", optional = true}
thiserror = {version = "2.0.12"}
tokenizers = {version = "0.21.0", optional = true}
tracing-chrome = {version = "0.7.2", optional = true}
tracing-subscriber = {version = "0.3.19", optional = true}
tts = {version = "0.26.3", optional = true}
